cangjie-language-server/test/message/semanticHighlight/LSP_SemanticHighlight_Enum_001.test
{"caseFolder":"normalTest//Enum", "id":"7"}
{"jsonrpc":"2.0","id":0,"method":"initialize","params":{"processId":33336,"clientInfo":{"name":"vscode","version":"1.55.2"},"rootPath":"d:\\Work\\repo\\Char\\NewVersion\\cangjie_language_server\\test\\testChr\\normalTest\\Enum","rootUri":"file:///d%3A/Work/repo/Char/NewVersion/cangjie_language_server/test/testChr/normalTest/Enum","capabilities":{"workspace":{"applyEdit":true,"workspaceEdit":{"documentChanges":true,"resourceOperations":["create","rename","delete"],"failureHandling":"textOnlyTransactional"},"didChangeConfiguration":{"dynamicRegistration":true},"didChangeWatchedFiles":{"dynamicRegistration":true},"symbol":{"dynamicRegistration":true,"symbolKind":{"valueSet":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26]}},"executeCommand":{"dynamicRegistration":true},"configuration":true,"workspaceFolders":true},"textDocument":{"publishDiagnostics":{"relatedInformation":true,"versionSupport":false,"tagSupport":{"valueSet":[1,2]}},"synchronization":{"dynamicRegistration":true,"willSave":true,"willSaveWaitUntil":true,"didSave":true},"completion":{"dynamicRegistration":true,"contextSupport":true,"completionItem":{"snippetSupport":true,"commitCharactersSupport":true,"documentationFormat":["markdown","plaintext"],"deprecatedSupport":true,"preselectSupport":true,"tagSupport":{"valueSet":[1]}},"completionItemKind":{"valueSet":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25]}},"hover":{"dynamicRegistration":true,"contentFormat":["markdown","plaintext"]},"signatureHelp":{"dynamicRegistration":true,"signatureInformation":{"documentationFormat":["markdown","plaintext"],"parameterInformation":{"labelOffsetSupport":true}},"contextSupport":true},"definition":{"dynamicRegistration":true,"linkSupport":true},"references":{"dynamicRegistration":true},"documentHighlight":{"dynamicRegistration":true},"documentSymbol":{"dynamicRegistration":true,"symbolKind":{"valueSet":[1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26]},"hierarchicalDocumentSymbolSupport":true},"codeAction":{"dynamicRegistration":true,"isPreferredSupport":true,"codeActionLiteralSupport":{"codeActionKind":{"valueSet":["","quickfix","refactor","refactor.extract","refactor.inline","refactor.rewrite","source","source.organizeImports"]}}},"codeLens":{"dynamicRegistration":true},"formatting":{"dynamicRegistration":true},"rangeFormatting":{"dynamicRegistration":true},"onTypeFormatting":{"dynamicRegistration":true},"rename":{"dynamicRegistration":true,"prepareSupport":true},"documentLink":{"dynamicRegistration":true,"tooltipSupport":true},"typeDefinition":{"dynamicRegistration":true,"linkSupport":true},"implementation":{"dynamicRegistration":true,"linkSupport":true},"colorProvider":{"dynamicRegistration":true},"foldingRange":{"dynamicRegistration":true,"rangeLimit":5000,"lineFoldingOnly":true},"declaration":{"dynamicRegistration":true,"linkSupport":true},"selectionRange":{"dynamicRegistration":true},"callHierarchy":{"dynamicRegistration":true},"semanticTokens":{"dynamicRegistration":true,"tokenTypes":["comment","keyword","number","regexp","operator","namespace","type","struct","class","interface","enum","typeParameter","function","member","macro","variable","parameter","property","label"],"tokenModifiers":["declaration","documentation","static","abstract","deprecated","async","readonly"]}},"window":{"workDoneProgress":true}},"trace":"off","workspaceFolders":[{"uri":"file:///d%3A/Work/repo/Char/NewVersion/cangjie_language_server/test/testChr/normalTest/Enum","name":"Enum"}],"workDoneToken":"d62352dd-57e9-4c79-a872-6bc79921d06a"}}
{"jsonrpc":"2.0","method":"initialized","params":{}}
{"jsonrpc":"2.0","method":"textDocument/didOpen","params":{"textDocument":{"uri":"file:///d:/test_char/src/enum2/enum2.cj","languageId":"Cangjie","version":0,"text":"// Copyright (c) Huawei Technologies Co., Ltd. 2025. All rights reserved.\n// This source file is part of the Cangjie project, licensed under Apache-2.0\n// with Runtime Library Exception.\n//\n// See https://cangjie-lang.cn/pages/LICENSE for license information.\n\npackage enum2\r\n\r\nenum TimeUnit3<T1, T2> {\r\n    | Year3(T1)\r\n    | Month3(T1, T2)\r\n    | Day3(T1, T2, T2)\r\n    | Hour3(T1, T2, T2, T2)\r\n}\r\n\r\nenum TimeUnit4 {\r\n    | Year45\r\n    | Year4(Int32) // ok\r\n    | Year4(Float32) // error: redeclaration of 'Year'\r\n    | Month4(Int32, Float32) // ok\r\n    | Month4(Int32, Int32) // error: redeclaration of'Month'\r\n    | Month4(Int32) // ok\r\n    | Day4(Int32, Float32, Float32) // ok\r\n    | Day4(Float32, Float32, Float32) // error: redeclaration of'Day'\r\n    | Day4(Float32, Float32) // ok\r\n    | Hour4(Int32, Float32, Float32, Float32) // ok\r\n    | Hour4(Int32, Int32, Int32, Int32) // error: redeclaration of'Day'\r\n    | Hour4(Int32, Int32, Int32) // ok\r\n}\r\n\r\nenum TimeUnit5 {\r\n    |Year5(Int32)\r\n    | Month5(Int32, Float32)\r\n    | Day5(Int32, Float32, Float32)\r\n    | Hour5(Int32, Float32, Float32, Float32)\r\n    | Twounit5(TimeUnit5, TimeUnit5)\r\n}\r\n\r\nenum E1 {\r\n    A | B(E2)\r\n}\r\nenum E2 {\r\n    C(E1) | D(E1)\r\n}\r\n\r\n// abcd\r\nenum T1 {\r\n    Year1 | Month1 | Day1 | Hour1\r\n}\r\nenum TimeUnit2 {\r\n    | Year2(Float32)\r\n    | Month2(Float32, Float32)\r\n    | Day2(Float32, Float32, Float32)\r\n    | Hour2(Float32, Float32, Float32, Float32)\r\n}\r\nlet time12 = T1.Year1\r\n\r\nfunc test1(): Int64 {\r\n   let time1 = T1.Year1\r\n   let time2 = TimeUnit2.Month2(1.0, 2.0)\r\n   let time3 = TimeUnit3<Int64,Float64>.Day3(1, 2.0, 3.0)\r\n\r\n   return 0\r\n}\r\nfunc test2(): Int64 {\r\n    let time4 = Year1 // syntax sugar of 'TimeUnit1.Year'\r\n    let time5 = Month2(1.0, 2.0) // syntax sugar of 'TimeUnit2.Month(1.0, 2.0)'\r\n    let time6 = Day3<Int64, Float64>(1, 2.0, 3.0) // syntax sugar of 'TimeUnit3<Int64, Float64>.Day(1, 2.0, 3.0)'\r\n\r\n    return 0\r\n}\r\n\r\nenum E {\r\n    | f(Int64)\r\n    | f(Int64, Int64, Int64)\r\n}\r\nfunc f(a: Int64) {}\r\nfunc f(a: Int64, b: Int64) {}\r\n\r\nenum EE<T> {\r\n    | A(T)\r\n    | B(T)\r\n}\r\nfunc fEE() {\r\n    let a = A(1) // ok, a: E<Int64>\r\n    let b = A<Int32>(2) // ok, b: E<Int32>\r\n}\r\nenum TimeUnit {\r\n| Year\r\n| Year(Int64)\r\n| Month(Int64, Int64)\r\n| Day(Int64, Int64, Int64)\r\n| Hour(Int64, Int64, Int64, Int64)\r\n\r\n}\r\nlet oneYear = TimeUnit.Year(1)\r\nvar howManyHours:Int64 = match (oneYear) {\r\n    case Year => 365\r\n    case Year(y) => y * 365 * 24 // matched\r\n    case Month(y, m) => y * 365 * 24 + m * 30 * 24\r\n    case Day(y, m, d) => y * 365 * 24 + m * 30 * 24 + d * 24\r\n    case Hour(y, m, d, h) => y * 365 * 24 + m * 30 * 24 + d * 24 + h\r\n}\r\nlet twoYear = TimeUnit.Year(2)\r\nvar howManyYears: Int64 = match (twoYear) {\r\n    case Year(y) | Month(y, m) => y  // error: different number of variables are introduced\r\n    case Year(y) | Month(x, _) => y  // error: different name of variables are introduced\r\n    case Year(y) | Month(y, _) => y  // ok\r\n//...\r\n}\r\n\r\nenum  enumtest1 {\r\n\t |Cvar1\r\n\t |Cvar2\r\n\t |Cfunc3(Int32)\r\n\t static func  staticFunc( )  {return 1 }\r\n\t static public func staticPublicFunc( )  {return 1}\r\n\t public func publicFunc( )  {return 1}\r\n     private static func privateStaticFunc( )  {return 1}\r\n     private  func privateFunc( )  {return 1}\r\n     func defaultFunc( )  {return 1}\r\n     mut prop varb: Int64 {\r\n          get() {\r\n              print(\"get\")\r\n              return 1\r\n          }\r\n          set(value){\r\n             print(\"set\")\r\n             let Cvar1 = value\r\n          }\r\n     }\r\n}\r\n//语法糖只补全 consturct 不补全枚举中的函数\r\nlet  test0 = staticPublicFunc() //not support\r\nlet  test1 =  Cvar1       // support\r\nlet  test2 =  Cfunc3(2)   // support\r\n// enumtest1.Cvar1.补全  如下\r\n//只支持补全 有且仅仅有 public的函数  public默认自带\r\nlet  test3 = enumtest1.Cvar1.publicFunc()\r\nlet  test4 = enumtest1.Cvar1.staticPublicFunc( )\r\nlet  test5 = enumtest1.Cvar1.staticFunc()\r\nlet  test6 = enumtest1.Cvar1.privateFunc()\r\nlet  test7 = enumtest1.Cvar1.privateStaticFunc()\r\nlet  test8 = enumtest1.Cvar1.defaultFunc()\r\nlet  test9 =  enumtest1.Cfunc3(2).defaultFunc()"}}}
{"jsonrpc":"2.0","id":7,"method":"textDocument/semanticTokens/full","params":{"textDocument":{"uri":"file:///d:/test_char/src/enum2/enum2.cj"}}}
{"jsonrpc":"2.0","id":1,"method":"shutdown","params":{}}
{"jsonrpc":"2.0","method":"exit","params":{}}