cangjie-language-server/test/message/semanticHighlight/LSP_SemanticHighlight_Enum_001.base
{"id":7,"jsonrpc":"2.0","result":{"data":[8,5,9,9,0,0,10,2,17,0,0,4,2,17,0,1,6,5,13,0,0,6,2,17,0,1,6,6,13,0,0,7,2,17,0,0,4,2,17,0,1,6,4,13,0,0,5,2,17,0,0,4,2,17,0,0,4,2,17,0,1,6,5,13,0,0,6,2,17,0,0,4,2,17,0,0,4,2,17,0,0,4,2,17,0,3,5,9,9,0,1,6,6,17,0,1,6,5,13,0,1,6,5,13,0,1,6,6,13,0,1,6,6,13,0,1,6,6,13,0,1,6,4,13,0,1,6,4,13,0,1,6,4,13,0,1,6,5,13,0,1,6,5,13,0,1,6,5,13,0,3,5,9,9,0,1,5,5,13,0,1,6,6,13,0,1,6,4,13,0,1,6,5,13,0,1,6,8,13,0,0,9,9,9,0,0,11,9,9,0,3,5,2,9,0,1,4,1,17,0,0,4,1,13,0,0,2,2,9,0,2,5,2,9,0,1,4,1,13,0,0,2,2,9,0,0,6,1,13,0,0,2,2,9,0,4,5,2,9,0,1,4,5,17,0,0,8,6,17,0,0,9,4,17,0,0,7,5,17,0,2,5,9,9,0,1,6,5,13,0,1,6,6,13,0,1,6,4,13,0,1,6,5,13,0,2,4,6,17,0,0,9,2,9,0,0,3,5,17,0,2,5,5,13,0,1,7,5,17,0,0,8,2,9,0,0,3,5,17,0,1,7,5,17,0,0,8,9,9,0,0,10,6,13,0,1,7,5,17,0,0,8,9,9,0,0,25,4,13,0,4,5,5,13,0,1,8,5,17,0,0,8,5,17,0,1,8,5,17,0,0,8,6,13,0,1,8,5,17,0,0,8,4,13,0,5,5,1,9,0,1,6,1,13,0,1,6,1,13,0,2,5,1,13,0,0,2,1,17,0,1,5,1,13,0,0,2,1,17,0,0,10,1,17,0,2,5,2,9,0,0,3,1,17,0,1,6,1,13,0,0,2,1,17,0,1,6,1,13,0,0,2,1,17,0,2,5,3,13,0,1,8,1,17,0,0,4,1,13,0,1,8,1,17,0,0,4,1,13,0,2,5,8,9,0,1,2,4,17,0,1,2,4,13,0,1,2,5,13,0,1,2,3,13,0,1,2,4,13,0,3,4,7,17,0,0,10,8,9,0,0,9,4,13,0,1,4,12,17,0,0,28,7,17,0,1,9,4,17,0,1,9,4,13,0,0,5,1,17,0,0,6,1,17,0,1,9,5,13,0,0,6,1,17,0,0,3,1,17,0,0,6,1,17,0,0,15,1,17,0,1,9,3,13,0,0,4,1,17,0,0,3,1,17,0,0,3,1,17,0,0,6,1,17,0,0,15,1,17,0,0,14,1,17,0,1,9,4,13,0,0,5,1,17,0,0,3,1,17,0,0,3,1,17,0,0,3,1,17,0,0,6,1,17,0,0,15,1,17,0,0,14,1,17,0,0,9,1,17,0,2,4,7,17,0,0,10,8,9,0,0,9,4,13,0,1,4,12,17,0,0,29,7,17,0,7,6,9,9,0,1,3,5,17,0,1,3,5,17,0,1,3,6,13,0,1,15,10,13,0,1,21,16,13,0,1,14,10,13,0,1,25,17,13,0,1,19,11,13,0,1,10,11,13,0,1,14,4,17,0,1,10,3,13,0,1,14,5,13,0,3,10,3,13,0,0,4,5,17,0,1,13,5,13,0,1,17,5,17,0,0,8,5,17,0,5,5,5,17,0,1,5,5,17,0,0,9,5,17,0,1,5,5,17,0,0,9,6,13,0,3,5,5,17,0,0,8,9,9,0,0,10,5,17,0,0,6,10,13,0,1,5,5,17,0,0,8,9,9,0,0,10,5,17,0,0,6,16,13,0,1,5,5,17,0,0,8,9,9,0,0,10,5,17,0,0,6,10,13,0,1,5,5,17,0,0,8,9,9,0,0,10,5,17,0,0,6,11,13,0,1,5,5,17,0,0,8,9,9,0,0,10,5,17,0,0,6,17,13,0,1,5,5,17,0,0,8,9,9,0,0,10,5,17,0,0,6,11,13,0,1,5,5,17,0,0,9,9,9,0,0,10,6,13,0,0,10,11,13,0]}}